# Badge-AppsecPnw-2024

./: .gitignore  README.md
.github/: stale.yml
firmware/: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/components/bt_gattc/: bt_gattc.c
firmware/components/bt_spam/: CMakeLists.txt  bt_spam.c  bt_spam.h
firmware/components/ieee_sniffer/: ieee_sniffer.c  (+1 more)
firmware/main/: CMakeLists.txt  Kconfig.projbuild  ble_client.c  ble_profiles.c  display.c  engine.c  idf_component.yml  keyboard.c  main.c  memory.c
firmware/main/bt_gattc/: bt_gattc.c  bt_gattc.h
firmware/main/bt_gatts/: bt_gatts.c  bt_gatts.h
firmware/main/drivers/: memory_driver.c  oled_ssd1306_driver.c  oled_ssd1306_driver.h  wifi_driver.c  wifi_driver.h
firmware/main/include/: ble_client_profiles.h  ble_profiles.h  button_helper.h  display.h  display_helper.h  engine.h  keyboard.h  memory.h
firmware/main/modules/: app_screen_module.h  app_screens_module.c  bitmaps.h  ble_client_module.c  ble_client_module.h  ble_server_module.c  ble_server_module.h  cross_keyboard_module.c  cross_keyboard_module.h  game_engine_module.c  game_engine_module.h  game_owasp_profile.h  game_screens_module.c  game_screens_module.h  led_events.c  led_events.h  menu_screens_modules.c  menu_screens_modules.h  screens_modules.h
firmware/main/modules/ble/: airtags_module.c  airtags_module.h  ble_module.c  ble_module.h  ble_screens_module.c  ble_screens_module.h  ble_spam.c
firmware/main/modules/device/: device_screens_module.c  device_screens_module.h
firmware/main/modules/game/: game_ble_client.c  game_ble_client.h  game_ble_server.c  game_ble_server.h
firmware/main/modules/wifi/: wifi_attack_brod_module.c  wifi_attack_brod_module.h  wifi_attacks_module.c  wifi_attacks_module.h  wifi_bitmaps.h  wifi_module.c  wifi_module.h  wifi_scanner_module.c  wifi_scanner_module.h  wifi_screens_module.c  wifi_screens_module.h
firmware/main/modules/zigbee/: zigbee_bitmaps.h  zigbee_module.c  zigbee_screens_module.c  zigbee_screens_module.h
hardware/: AppsecPnw-2024.kicad_pcb  AppsecPnw-2024.kicad_prl  AppsecPnw-2024.kicad_pro  AppsecPnw-2024.kicad_sch  AppsecPnw-2024.sch  electroniccats_pcb.kibot.yaml  electroniccats_sch.kibot.yaml  sym-lib-table  ~AppsecPnw-2024.kicad_sch.lck
hardware/Footprints/: AAA3528SURKCGKC09.kicad_mod  ESP32-C6-WROOM-1-N4.kicad_sym
(+30 files in other folders)
